Styles/styles.css
/* General Reset */

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

img {
  max-width: 100%;
}

body {
  font-family: 'Space Grotesk';
  background-color: var(--dark-color);
  position: relative;
  overflow-x: hidden;
}

:root {
  --dark-color: #151515;
  --neon-green: #4ee1a0;
  --dark-grey: #242424;
  --light-grey: #d9d9d9;
  --white: #fff;
}

/* Utility Classes */

.container {
  max-width: 1150px;
  padding: 0 2rem;
  margin: 0 auto;
}

.divider {
  background-color: white;
  width: 100%;
  height: 1px;
  margin-top: 13rem;
  padding: 0 !important;
}

/* Profile Image */

.profile {
  position: absolute;
  z-index: -1;
  width: 450px;
  top: 0px;
  right: 0px;
}

.circle {
  position: absolute;
  bottom: 0;
  top: 500px;
  left: 635px;
}

/* Header */

.header {
  background-color: transparent;
  padding: 2rem 0;
}

.header-flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header .social-links {
  display: flex;
  gap: 2rem;
}

.header .name {
  color: var(--White, #fff);
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: 32px; /* 100% */
  letter-spacing: -0.444px;
}

/* Hero */

.ring1 {
  position: absolute;
  top: 140px;
  left: -240px;
}

.hero {
  position: relative;
}

.hero h1 {
  color: var(--white);
  font-family: 'Space Grotesk';
  font-size: 88px;
  font-style: normal;
  font-weight: 700;
  line-height: 88px; /* 100% */
  letter-spacing: -2.5px;
  margin-top: 7rem;
  max-width: 706px;
}

.adam {
  position: relative;
  display: inline-block;
}

.adam::after {
  content: '';
  position: absolute;
  bottom: -7px;
  left: 0;
  width: 100%;
  height: 7px;
  background-color: var(--neon-green);
  z-index: -1;
}

.hero p {
  width: 445px;
  color: var(--Grey, #d9d9d9);
  font-feature-settings: 'liga' off, 'clig' off;
  font-family: 'Space Grotesk';
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: 28px; /* 155.556% */
  margin-top: 3rem;
}

.btn {
  position: relative;
  display: inline-block;
  margin-top: 4.4rem;
  color: var(--White, #fff);
  font-family: 'Space Grotesk';
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 26px; /* 162.5% */
  letter-spacing: 2.286px;
  transition: color 0.3s ease;
}

.btn:hover {
  color: var(--neon-green);
}

.btn::after {
  content: '';
  position: absolute;
  bottom: -8px;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: var(--neon-green);
  z-index: -1;
}

/* Experience */
.experience-wrapper {
  position: relative;
  height: 300px;
  /* overflow-x: hidden; */
}
.experience {
  display: grid;
  width: 100%;
  gap: 30px;
  grid-template-columns: 352px 352px 352px;
  grid-template-rows: 98px 98px;
  margin-top: 3rem;
  margin-bottom: 1rem;
}

.experience h2 {
  color: var(--White, #fff);
  font-feature-settings: 'liga' off, 'clig' off;
  /* Heading (L) */
  font-family: 'Space Grotesk';
  font-size: 48px;
  font-style: normal;
  font-weight: 700;
  line-height: 56px; /* 116.667% */
  letter-spacing: -1.5px;
}

.experience p {
  color: var(--Grey, #d9d9d9);
  font-feature-settings: 'liga' off, 'clig' off;
  /* Body */
  font-family: 'Space Grotesk';
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: 28px; /* 155.556% */
}

.experience .n {
  display: flex;
  flex-direction: column;
  gap: 14px;
}

.ring2 {
  position: absolute;
  right: -430px;
  bottom: 20px;
}

.divider1 {
  background-color: white;
  width: 98%;
  height: 1px;
  margin: 0 auto;
  display: none;
}

/* Projects */

.projects {
  margin-top: 6rem;
}

.projects h2 {
  color: var(--White, #fff);
  font-feature-settings: 'liga' off, 'clig' off;
  /* Heading (XL) */
  font-family: 'Space Grotesk';
  font-size: 88px;
  font-style: normal;
  font-weight: 700;
  line-height: 88px; /* 100% */
  letter-spacing: -2.5px;
}

.projects-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.projects-grid {
  display: grid;
  grid-template-columns: 540px 540px;
  grid-template-rows: 487px 487px 487px;
  grid-row-gap: 69px;
  grid-column-gap: 24px;
  margin-top: 117px;
}

.proj-info {
  margin-bottom: 68px;
}

.img-container {
  width: 545px;
  height: 400px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.img-container img {
  width: 100%;
  height: 100%;
  transition: opacity 0.2s ease-in-out;
}

.btn-container {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  gap: 3.2rem;
}

.img-container:hover .btn-container {
  display: flex;
}

.img-container:hover img {
  opacity: 0.2;
}

.btn-proj {
  position: relative;
  display: inline-block;
  /* margin-top: 2rem; */
  color: var(--White, #fff);
  font-family: 'Space Grotesk';
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 26px;
  letter-spacing: 2.286px;
  transition: color 0.3s ease;
}

.btn-proj:hover {
  color: var(--neon-green);
}

.btn-proj::after {
  content: '';
  position: absolute;
  bottom: -8px;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: var(--neon-green);
  z-index: -1;
}

.btn-container:hover + img,
.btn-container:hover img {
  opacity: 1;
}

.proj h4 {
  color: var(--White, #fff);
  font-feature-settings: 'liga' off, 'clig' off;
  /* Heading (M) */
  font-family: 'Space Grotesk';
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: 32px; /* 133.333% */
  margin-top: 14px;
}

.proj .lang-used {
  display: flex;
  gap: 10px;
}

.proj .lang-used p {
  color: var(--Grey, #d9d9d9);
  font-feature-settings: 'liga' off, 'clig' off;
  /* Body */
  font-family: 'Space Grotesk';
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: 28px; /* 155.556% */
}

.projects {
  margin-bottom: 139px;
}
/* ... */

